--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/test game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/test game.data.br",
-        frameworkUrl: buildUrl + "/test game.framework.js.br",
-        codeUrl: buildUrl + "/test game.wasm.br",
+        dataUrl: buildUrl + "/test game.data.unityweb",
+        frameworkUrl: buildUrl + "/test game.framework.js.unityweb",
+        codeUrl: buildUrl + "/test game.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "AHA!",
